--- a/style.css
+++ b/style.css
@@ -2,20 +2,21 @@
     padding:0;
     margin:0;
 }
-.logo{
-    height: 25px;
-    width: 25px;
-    background-color:red;
-    border-radius: 50%;
-    display: inline-block;
+.possum-logo{
+    Height: 120px;
+    width: 120px;
+    padding-left: 3%;
 }
 .header-fade{
-    height: 55px;
+    height: 40px;
     width: 100%;
     background-image:linear-gradient(black, transparent);
 }
 .opaque-top-rectangle{
-    height: 80px;
+    display: flex;
+    height: 100px;
     width: 100%;
     background-color:black;
+    color: white;
+    font-size: 90px;
 }
