--- a/style.css
+++ b/style.css
@@ -17,6 +17,24 @@
     height: 100px;
     width: 100%;
     background-color:black;
+}
+.title{
     color: white;
     font-size: 90px;
+    font-weight: Bold;
+}
+.sign-in-button{
+    height:40%;
+    width:10%;
+    appearance:none;
+    outline:none;
+    background:none;
+    border:none;
+    cursor:pointer;
+    font-size: 30px;
+    font-weight: bold;
+    background-color: rgb(0, 102, 255);
+    border-radius: 0.2rem;
+    padding:-0.5rem -10rem;
+    color: white;
 }
