--- a/style.css
+++ b/style.css
@@ -3,29 +3,36 @@
     margin:0;
 }
 .possum-logo{
-    Height: 120px;
-    width: 120px;
+    Height: 100px;
+    width: 100px;
     padding-left: 3%;
+    margin-right: 30px;
+    margin-top:5px;
+    flex: 0.6;
 }
 .header-fade{
-    height: 40px;
+    position:absolute;
+    top:110px;
+    height: 60px;
     width: 100%;
     background-image:linear-gradient(black, transparent);
 }
 .opaque-top-rectangle{
     display: flex;
-    height: 100px;
+    flex-direction: horizontal;
+    height: 110px;
     width: 100%;
     background-color:black;
 }
 .title{
-    color: white;
+    color: rgb(0, 102, 255);
     font-size: 90px;
     font-weight: Bold;
+    margin-right: min(90vh, 10px);
+    flex: 10;
 }
 .sign-in-button{
-    height:40%;
-    width:10%;
+
     appearance:none;
     outline:none;
     background:none;
@@ -34,7 +41,160 @@
     font-size: 30px;
     font-weight: bold;
     background-color: rgb(0, 102, 255);
-    border-radius: 0.2rem;
-    padding:-0.5rem -10rem;
+    border-radius: 4px;
+    padding-left: 30px;
+    padding-right:30px;
+    padding-top: 0px;
+    padding-bottom:0px;
     color: white;
+    margin-top: 10px;
+    margin-bottom:10px;
+}
+.sign-in-button:hover {
+    background-color:  rgb(67, 142, 253);
+    box-shadow: 3px 2px 10px rgba(255, 255, 255, 0.4);
+}
+
+.sign-up-button{
+
+    appearance:none;
+    outline:none;
+    background:none;
+    border:none;
+    cursor:pointer;
+    font-size: 30px;
+    font-weight: bold;
+    background-color: rgb(0, 102, 255);
+    border-radius: 4px;
+    padding-left: 30px;
+    padding-right:30px;
+    padding-top: 0px;
+    padding-bottom:0px;
+    color: white;
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-right:10px;
+    margin-bottom:10px;
+}
+.sign-up-button:hover {
+    background-color:  rgb(67, 142, 253);
+    box-shadow: 3px 2px 10px rgba(255, 255, 255, 0.4);
+}
+
+.hero-container {
+    height:45.8vw;
+    width:100%;
+    background-image: url(PFSBackground.jpg);
+}
+
+.hero-main-text {
+    Position: absolute;
+    margin-top: 2vw;
+    left: 5%;
+    text-align: center;
+    color: white;
+    font-size: 6.5vw;
+    font-weight: Bold;
+    width: 90%;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
+}
+
+.price-text{
+    Position: absolute;
+    margin-top: 20vw;
+    left: 30%;
+    text-align: center;
+    color: #ffffff;
+    font-size: 2.5vw;
+    width: 40%;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
+}
+
+.search-bar{
+    Position: absolute;
+    margin-top: 29vw;
+    left: 30vw;
+    background: rgba(255, 255, 255, 0.4);
+    width: 40vw;
+    height: 6vw;
+    display:flex;
+    align-items: center;
+    border-radius:5px;
+    padding:5px 5px;
+}
+/*Fix the sizing for when it shrinks damn it*/
+.search-text{
+    font-size:5vw;
+}
+
+.search-bar input{
+    background: transparent;
+    flex: 1;
+    border: 0;
+    outline: none;
+    padding: 10px 8px;
+    font-size: 40px;
+    color: white;
+}
+
+::placeholder{
+    color:white;
+}
+
+.feature-fade{
+    position: absolute;
+    margin-top:42vw;
+    height: 4vw;
+    width: 100%;
+    background-image:linear-gradient(transparent, black);
+}
+
+.feature-container{
+    display:grid;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: 10vw 25vw;
+    background-color: black;
+}
+
+.featured-title{
+    grid-row: 1;
+    grid-column:2;
+    text-align: center;
+    color: white;
+    font-size: 7.5vw;
+    font-weight: Bold;
+    width: 80%;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
+}
+
+.possum-horror-poster{
+    grid-row:2;
+    grid-column:1;
+    height: 23vw;
+    border-radius:10px;
+    margin-left: 40%;
+}
+
+.second-movie{
+    grid-row:2;
+    grid-column:2;
+    height: 23vw;
+    border-radius:10px;
+    margin-left: 20%;
+    margin-right:20%;
+}
+
+.third-movie{
+    grid-row:2;
+    grid-column:3;
+    height: 23vw;
+    border-radius:10px;
+    margin-right:20%;
+}
+
+.footer-container{
+    display:grid;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: 10vw;
+    background-color: white;
 }
