--- a/style.css
+++ b/style.css
@@ -3,36 +3,27 @@
     margin:0;
 }
 .possum-logo{
-    Height: 100px;
-    width: 100px;
+    Height: 75px;
     padding-left: 3%;
     margin-right: 30px;
-    margin-top:5px;
+    margin-top:10px;
     flex: 0.6;
-}
-.header-fade{
-    position:absolute;
-    top:110px;
-    height: 60px;
-    width: 100%;
-    background-image:linear-gradient(black, transparent);
 }
 .opaque-top-rectangle{
     display: flex;
     flex-direction: horizontal;
-    height: 110px;
+    height: 90px;
     width: 100%;
     background-color:black;
 }
 .title{
     color: rgb(0, 102, 255);
-    font-size: 90px;
-    font-weight: Bold;
-    margin-right: min(90vh, 10px);
+    font-size: 80px;
+    font-weight: Bold;   
+    margin-right: 10px;
     flex: 10;
 }
 .sign-in-button{
-
     appearance:none;
     outline:none;
     background:none;
@@ -47,8 +38,9 @@
     padding-top: 0px;
     padding-bottom:0px;
     color: white;
-    margin-top: 10px;
-    margin-bottom:10px;
+    margin: 10px 20px;
+    text-align:center;
+    flex: 1.2;
 }
 .sign-in-button:hover {
     background-color:  rgb(67, 142, 253);
@@ -56,7 +48,6 @@
 }
 
 .sign-up-button{
-
     appearance:none;
     outline:none;
     background:none;
@@ -71,10 +62,9 @@
     padding-top: 0px;
     padding-bottom:0px;
     color: white;
-    margin-top: 10px;
-    margin-left: 20px;
-    margin-right:10px;
-    margin-bottom:10px;
+    margin: 10px 20px;
+    text-align:center;
+    flex: 1.3;
 }
 .sign-up-button:hover {
     background-color:  rgb(67, 142, 253);
@@ -82,18 +72,18 @@
 }
 
 .hero-container {
-    height:45.8vw;
+    height:800px;
     width:100%;
     background-image: url(PFSBackground.jpg);
 }
 
 .hero-main-text {
     Position: absolute;
-    margin-top: 2vw;
+    margin-top: 20px;
     left: 5%;
     text-align: center;
     color: white;
-    font-size: 6.5vw;
+    font-size: 110px;
     font-weight: Bold;
     width: 90%;
     font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
@@ -101,30 +91,26 @@
 
 .price-text{
     Position: absolute;
-    margin-top: 20vw;
+    margin-top: 22vw;
     left: 30%;
     text-align: center;
     color: #ffffff;
-    font-size: 2.5vw;
+    font-size: 40px;
     width: 40%;
     font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
 }
 
 .search-bar{
     Position: absolute;
-    margin-top: 29vw;
-    left: 30vw;
+    margin-top: 500px;
+    left: 30%;
     background: rgba(255, 255, 255, 0.4);
-    width: 40vw;
-    height: 6vw;
+    width: 40%;
+    height: 5vw;
     display:flex;
     align-items: center;
     border-radius:5px;
     padding:5px 5px;
-}
-/*Fix the sizing for when it shrinks damn it*/
-.search-text{
-    font-size:5vw;
 }
 
 .search-bar input{
@@ -133,20 +119,13 @@
     border: 0;
     outline: none;
     padding: 10px 8px;
-    font-size: 40px;
+    font-size: 2vw;
+    width: 35%;
     color: white;
 }
 
 ::placeholder{
     color:white;
-}
-
-.feature-fade{
-    position: absolute;
-    margin-top:42vw;
-    height: 4vw;
-    width: 100%;
-    background-image:linear-gradient(transparent, black);
 }
 
 .feature-container{
@@ -195,6 +174,174 @@
 .footer-container{
     display:grid;
     grid-template-columns: 33% 33% 33%;
-    grid-template-rows: 10vw;
-    background-color: white;
+    grid-template-rows: 150px 40px 200px;
+    background-image: url(PossumFSFooterBackground.png);
+}
+
+.footer-questions{
+    margin-top: 10px;
+    margin-left: 10%;
+    grid-column: span 2;
+    grid-row: 2;
+    color:white;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
+    font-size: 16px;
+    text-decoration: underline;
+}
+
+.footer-faq{
+    margin-top: 30px;
+    margin-left: 20%;
+    grid-column: 1;
+    grid-row: 3;
+    color:white;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
+    font-size: 16px;
+    text-decoration: underline;
+}
+.contact-us{
+    margin-top: 70px;
+    margin-left: 20%;
+    grid-column: 1;
+    grid-row: 3;
+    color:white;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
+    font-size: 16px;
+    text-decoration: underline;
+}
+
+.help-center{
+    margin-top: 110px;
+    margin-left: 20%;
+    grid-column: 1;
+    grid-row: 3;
+    color:white;
+    font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
+    font-size: 16px;
+    text-decoration: underline;
+}
+
+@media only screen and (max-width: 1500px) {
+    .hero-main-text{
+        font-size:90px;
+    }
+    .price-text{
+        font-size: 35px;
+    }
+    .search-bar{
+        margin-top: 450px;
+    }
+    .hero-container {
+        height:700px;
+    }
+}
+
+@media only screen and (max-width: 1300px) {
+    .hero-main-text{
+        font-size:80px;
+    }
+    .price-text{
+        font-size: 30px;
+    }
+    .search-bar{
+        margin-top: 400px;
+    }
+    .hero-container {
+        height:600px;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .hero-main-text{
+        font-size:70px;
+    }
+    .price-text{
+        font-size: 25px;
+    }
+    .search-bar{
+        margin-top: 350px;
+    }
+    .hero-container {
+        height:500px;
+    }
+}
+
+@media only screen and (max-width: 1000px) {
+    .title{
+        font-size: 40px;
+        margin-top: 10px;
+    }
+    .possum-logo{
+        Height: 55px;
+    }
+    .sign-in-button{
+        font-size: 20px;
+        padding-left: 25px;
+        padding-right:25px; 
+    }
+    .sign-up-button{
+        font-size: 20px;
+        padding-left: 25px;
+        padding-right:25px; 
+    }
+    .opaque-top-rectangle{
+        height: 70px;
+    }
+
+    .hero-main-text{
+        font-size:60px;
+    }
+    .price-text{
+        font-size: 20px;
+    } 
+    .search-bar{
+        margin-top: 300px;
+    }
+    .hero-container {
+        height:400px;
+    }
+}
+
+@media only screen and (max-width: 830px) {
+    .hero-main-text{
+        font-size:50px;
+    }
+    .search-bar{
+        margin-top: 250px;
+    }
+    .hero-container {
+        height:330px;
+    }
+}
+
+@media only screen and (max-width: 690px) {
+    .hero-main-text{
+        font-size:40px;
+    }
+    .price-text{
+        margin-top: 22vh;
+        font-size: 15px;
+    } 
+    .sign-up-button{
+        margin-right: 5px;
+        margin-left:5px;
+    }
+    .sign-in-button{
+        margin-right: 5px;
+        margin-left:5px;
+    }
+    .search-bar{
+        margin-top: 200px;
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .hero-main-text{
+        margin-top:40px;
+        font-size:30px;
+    }
+    .price-text{
+        margin-top: 23vh;
+        font-size: 13px;
+    } 
 }
